Fixed misc. layout issues
Sidebar footer message isolation and left text-align for blog posts.

--- a/shared/css/sheet.css
+++ b/shared/css/sheet.css
@@ -95,6 +95,9 @@ footer {
     padding:20px;
     text-align:center;
 }
+#posts div {
+    text-align:left;
+}
 .blogcont {
     width:100%;
     height:40px;
@@ -306,6 +309,7 @@ h3 {
     font-size:22px;
     padding:10px;
     padding-top:0;
+    text-align:left;
 }
 h3.main {
     color:#333;
@@ -362,7 +366,6 @@ nav a:hover {
     color:#333;
     padding:12px 16px;
     padding-top:0;
-    margin-bottom:52px;
 }
 .side li {
     list-style-type:none;
@@ -523,6 +526,6 @@ input[type="text"] {
 }
 #sidebar .main {
 	font-size:14px;
-	position:absolute;
-	bottom:14px;
+	position:relative;
+	bottom:-8px;
 }
